--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
           <p>ul. Józefa Grzesiaka Czarnego 8/U16</p>
           <p>31-223 Kraków</p>
           <p><span>Telefon:</span>
-            <a href="+48885888030">+ 48 885 888 030</a></p>
+            <a href="+48XXXXXXXXX">+ 48 XXX XXX XXX</a></p>
+          <p>JEST TO NIEOFICJALNA STRONA <a href="https://www.beauty-story.pl/"><strong>Beauty Story<strong></a></p>
         </div>
         <div class="wrap-form">
           <h2>Wypełnij formularz i uzyskaj odpowiedź na swoje pytania.</h2>
