--- a/index.html
+++ b/index.html
@@ -193,7 +193,6 @@
           <p>31-223 Kraków</p>
           <p><span>Telefon:</span>
             <a href="+48XXXXXXXXX">+ 48 XXX XXX XXX</a></p>
-          <p>JEST TO NIEOFICJALNA STRONA <a href="https://www.beauty-story.pl/"><strong>Beauty Story<strong></a></p>
         </div>
         <div class="wrap-form">
           <h2>Wypełnij formularz i uzyskaj odpowiedź na swoje pytania.</h2>
@@ -233,6 +232,7 @@
     </section>
     <footer>
       <div class="copyright">
+        <div><p>JEST TO NIEOFICJALNA STRONA. Oficjalna strona na <a href="https://www.beauty-story.pl/"><strong>Beauty Story<strong></a></p></div>
         <p>Copyrights © 2018
           <a title="Beauty Story Kosmetologia Estetyczna" href="http://www.beauty-story.pl" class="kolor-2 link">www.beauty-story.pl</a></p>
       </div>
