--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
             <div class="form-row">
               <label class="checkbox-cnt">
                 <input type="checkbox"/>
+                <i class="state" aria-hidden="true"></i>
                 <span><a target="blank" href="pliki/Zasady przetwarzania danych osobowych.pdf"> Zapoznałem się z
                     informacjami dotyczącymi zasad przetwarzania moich danych osobowych.</a></span>
               </label>
