--- a/pliki-html/zabiegi.html
+++ b/pliki-html/zabiegi.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="menu-media">
-      <div class="media-line"><a href="../index.html">HOME</a>
+      <div class="media-line"><a href="./../index.html">HOME</a>
       </div>
       <div class="media-line"><a href="../pliki-html/zabiegi.html">KARTA ZABIEGÓW</a></div>
       <div class="media-line"><a href="../pliki-html/cennik.html">CENNIK</a></div>
@@ -43,7 +43,7 @@
 
       <div class="media-blog"><a target="_blank" href="http://www.blog.beauty-story.pl/">BLOG</a></div>
 
-      <div class="media-line cont"><a href="../index.html#contact">KONTAKT</a></div>
+      <div class="media-line cont"><a href="./../index.html#contact">KONTAKT</a></div>
 
       <div class="visits"><a target="_blank" href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
           WIZYTĘ</a></div>
@@ -57,7 +57,7 @@
     <!-- ~~!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
     <nav class="menu">
-      <div class="line"><a href="/../index.html">HOME</a>
+      <div class="line"><a href="./../index.html">HOME</a>
       </div>
       <div class="line card-tr">
         KARTA ZABIEGÓW
@@ -80,10 +80,10 @@
       </div>
       <div class="line"><a href="../pliki-html/promocje.html">PROMOCJE</a></div>
       <div class="line"><a href="../pliki-html/o-nas.html">O NAS</a></div>
-      <a href="/../index.html">
+      <a href="./../index.html">
         <div class="logo"></div>
       </a>
-      <div class="line cont"><a href="/../index.html#contact">KONTAKT</a></div>
+      <div class="line cont"><a href="./../index.html#contact">KONTAKT</a></div>
       <div class="visit"><a target="_blank" href="https://www.moment.pl/beauty-story-kosmetologia-estetyczna">ZAREZERWUJ
           WIZYTĘ</a></div>
       <div class="blog"><a target="_blank" href="http://www.blog.beauty-story.pl/">BLOG</a></div>
