--- a/pliki-html/zabiegi.html
+++ b/pliki-html/zabiegi.html
@@ -25,7 +25,7 @@
 <body>
   <div class="wrap-all">
 
-    <!-- menu-mediaaa!!!!!!!!!!!!!!!!!!!!!! -->
+    <!-- menu-media!!!!!!!!!!!!!!!!!!!!!! -->
     <div class="wrap-menu-media">
       <div class="media-logo"><img src="../grafika/logo02.png" alt="logo beauty story"></div>
       <div class="menu-ham"><i class="fas fa-bars"></i>
